@@ -2,6 +2,7 @@ Pending changes in the mainline
 ===============================
 
 * "Permissive" flag for URI "/modalities/{...}/store" to ignore C-Store transfer errors
+* New configuration options: "DicomScuTimeout" and "DicomScpTimeout"
 
 
 Version 1.1.0 (2016/06/27)
